--- a/mnist/Farhi_mnist_binary_290923.ipynb
+++ b/mnist/Farhi_mnist_binary_290923.ipynb
@@ -2,23 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!pip install pennylane --quiet\n",
-        "!pip install pennylane-lightning --quiet\n",
-        "!pip install autograd --quiet"
-      ],
+      "execution_count": 1,
       "metadata": {
-        "id": "_d3k8zhN45Fl",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "_d3k8zhN45Fl",
         "outputId": "4a9b6aa8-128f-4357-8ed1-2466844b7ad8"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m8.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m14.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
@@ -28,6 +23,11 @@
             "\u001b[?25h"
           ]
         }
+      ],
+      "source": [
+        "!pip install pennylane --quiet\n",
+        "!pip install pennylane-lightning --quiet\n",
+        "!pip install autograd --quiet"
       ]
     },
     {
@@ -48,20 +48,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 52,
+      "metadata": {
+        "id": "wwq3a5OoY18D"
+      },
+      "outputs": [],
       "source": [
         "num_qubits = 16\n",
         "num_layers = 6\n",
         "weights_init = np.random.uniform(-np.pi, np.pi, (num_layers, num_qubits, 1))\n",
         "bias_init = np.array([0.])"
-      ],
-      "metadata": {
-        "id": "wwq3a5OoY18D"
-      },
-      "execution_count": 52,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "sGnyKytf4z80"
+      },
+      "outputs": [],
       "source": [
         "import tensorflow as tf\n",
         "import numpy as onp\n",
@@ -165,29 +170,23 @@
         "    x_train_bin = np.array(x_train_nocon > THRESHOLD, dtype=np.float32)\n",
         "    x_test_bin = np.array(x_test_small > THRESHOLD, dtype=np.float32)\n",
         "\n",
-        "    return x_train_bin.reshape(-1, 16), y_train_nocon, x_test_bin.reshape(-1, 16), y_test\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "sGnyKytf4z80"
-      },
-      "execution_count": 4,
-      "outputs": []
+        "    return x_train_bin.reshape(-1, 16), y_train_nocon, x_test_bin.reshape(-1, 16), y_test"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "fI9aFsFG4w6N",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "fI9aFsFG4w6N",
         "outputId": "b4d8c7cf-8ca4-49d2-ec21-08ea30d370be"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
             "11490434/11490434 [==============================] - 0s 0us/step\n",
@@ -251,10 +250,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "for i in range(100):\n",
-        "  print(circuit(weights_init, X_train[i]))"
-      ],
+      "execution_count": 100,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -263,11 +259,10 @@
         "id": "hXYTYYRBZrnO",
         "outputId": "bd42737a-ea40-4b20-aa08-bd0a99bb8b29"
       },
-      "execution_count": 100,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0.00013296389304577548\n",
             "-0.0002277243013287532\n",
@@ -308,9 +303,9 @@
           ]
         },
         {
-          "output_type": "error",
           "ename": "KeyboardInterrupt",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -332,13 +327,15 @@
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
+      ],
+      "source": [
+        "for i in range(100):\n",
+        "  print(circuit(weights_init, X_train[i]))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "weights_init"
-      ],
+      "execution_count": 58,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -346,10 +343,8 @@
         "id": "dKZf3WpxyETb",
         "outputId": "ac8984f5-6d6d-47d2-e5fc-b3b44c3f16b4"
       },
-      "execution_count": 58,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([[[ 1.29794716],\n",
@@ -455,16 +450,18 @@
               "         [-1.38815702]]], requires_grad=True)"
             ]
           },
+          "execution_count": 58,
           "metadata": {},
-          "execution_count": 58
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "weights_init"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X_train[0]"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -472,37 +469,44 @@
         "id": "8qjx1DUaZ16N",
         "outputId": "6cc2ef1d-90d8-4ddc-a999-d8ff926c6369"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 1., 0., 0.],\n",
               "       dtype=float32, requires_grad=True)"
             ]
           },
+          "execution_count": 43,
           "metadata": {},
-          "execution_count": 43
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "X_train[0]"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 102,
+      "metadata": {
+        "id": "QEHZ8YqICrw-"
+      },
+      "outputs": [],
       "source": [
         "def variational_classifier(weights, x):\n",
         "    #return circuit(weights, x) + bias\n",
         "    return circuit(weights, x)\n",
         "    #return np.dot(circuit(weights, x), np.array([1, -1]))"
-      ],
-      "metadata": {
-        "id": "QEHZ8YqICrw-"
-      },
-      "execution_count": 102,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 103,
+      "metadata": {
+        "id": "DlnKX_q5CuT6"
+      },
+      "outputs": [],
       "source": [
         "# def square_loss(labels, predictions):\n",
         "#     loss = 0\n",
@@ -533,15 +537,15 @@
         "#     print(loss)\n",
         "\n",
         "#     return loss/len(loss)\n"
-      ],
-      "metadata": {
-        "id": "DlnKX_q5CuT6"
-      },
-      "execution_count": 103,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 89,
+      "metadata": {
+        "id": "FD8s8lXICw_o"
+      },
+      "outputs": [],
       "source": [
         "# def accuracy(labels, predictions):\n",
         "\n",
@@ -552,89 +556,50 @@
         "#     loss = loss / len(labels)\n",
         "\n",
         "#     return loss"
-      ],
-      "metadata": {
-        "id": "FD8s8lXICw_o"
-      },
-      "execution_count": 89,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 90,
+      "metadata": {
+        "id": "iEt_-upzCzVt"
+      },
+      "outputs": [],
       "source": [
         "def cost(weights, X, Y):\n",
         "    predictions = [variational_classifier(weights, x) for x in X]\n",
         "    #return square_loss(Y, predictions)\n",
         "    # print(loss(Y, predictions))\n",
         "    return loss(Y, predictions)\n"
-      ],
-      "metadata": {
-        "id": "iEt_-upzCzVt"
-      },
-      "execution_count": 90,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "opt = qml.AdamOptimizer(0.1)\n",
-        "batch_size = 10"
-      ],
+      "execution_count": 91,
       "metadata": {
         "id": "fDJhlmVLDFDO"
       },
-      "execution_count": 91,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "opt = qml.AdamOptimizer(0.1)\n",
+        "batch_size = 10"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "weights = weights_init\n",
-        "bias = bias_init"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "gbhOaDFkF6li"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "weights = weights_init\n",
+        "bias = bias_init"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 4 feaatures\n",
-        "\n",
-        "# Experiment method 5\n",
-        "\n",
-        "opt = qml.AdamOptimizer(stepsize = 0.001) # original 0.001\n",
-        "batch_size = 5\n",
-        "num_train = len(X_train)\n",
-        "\n",
-        "\n",
-        "# train the variational classifier\n",
-        "var_weights = weights_init\n",
-        "exp_time = time()\n",
-        "for it in range(0, 12001):\n",
-        "\n",
-        "    # Gradient descent step\n",
-        "    batch_index = np.random.randint(0, num_train, (batch_size,))\n",
-        "    feats_train_batch = X_train[batch_index]\n",
-        "    Y_train_batch = Y_train[batch_index]\n",
-        "    var_weights = opt.step(lambda v_weights: cost(v_weights, feats_train_batch, Y_train_batch), var_weights)\n",
-        "\n",
-        "\n",
-        "    if it % 200 == 0:\n",
-        "      print(it)\n",
-        "      print(\"cost:\", cost(var_weights, feats_train_batch, Y_train_batch))\n",
-        "      print(repr(var_weights))\n",
-        "      print(f\"--------time VarQMC Epoch: {it}---------------\")\n",
-        "      print(time() - exp_time)\n",
-        "      exp_time = time()\n",
-        "\n",
-        "    if it % 800 == 0:\n",
-        "      print(it)\n",
-        "      print(\"cost:\", cost(var_weights, X_train[:100], Y_train[:100]))\n",
-        "      print(repr(var_weights))"
-      ],
+      "execution_count": 107,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -643,11 +608,10 @@
         "id": "0lsbDCQjU67f",
         "outputId": "84fe3abd-96ec-4793-8606-27e2bb878c21"
       },
-      "execution_count": 107,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0\n",
             "cost: 1.0000347855618872\n",
@@ -860,9 +824,9 @@
           ]
         },
         {
-          "output_type": "error",
           "ename": "KeyboardInterrupt",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -888,24 +852,57 @@
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
+      ],
+      "source": [
+        "# 4 feaatures\n",
+        "\n",
+        "# Experiment method 5\n",
+        "\n",
+        "opt = qml.AdamOptimizer(stepsize = 0.001) # original 0.001\n",
+        "batch_size = 5\n",
+        "num_train = len(X_train)\n",
+        "\n",
+        "\n",
+        "# train the variational classifier\n",
+        "var_weights = weights_init\n",
+        "exp_time = time()\n",
+        "for it in range(0, 12001):\n",
+        "\n",
+        "    # Gradient descent step\n",
+        "    batch_index = np.random.randint(0, num_train, (batch_size,))\n",
+        "    feats_train_batch = X_train[batch_index]\n",
+        "    Y_train_batch = Y_train[batch_index]\n",
+        "    var_weights = opt.step(lambda v_weights: cost(v_weights, feats_train_batch, Y_train_batch), var_weights)\n",
+        "\n",
+        "\n",
+        "    if it % 200 == 0:\n",
+        "      print(it)\n",
+        "      print(\"cost:\", cost(var_weights, feats_train_batch, Y_train_batch))\n",
+        "      print(repr(var_weights))\n",
+        "      print(f\"--------time VarQMC Epoch: {it}---------------\")\n",
+        "      print(time() - exp_time)\n",
+        "      exp_time = time()\n",
+        "\n",
+        "    if it % 800 == 0:\n",
+        "      print(it)\n",
+        "      print(\"cost:\", cost(var_weights, X_train[:100], Y_train[:100]))\n",
+        "      print(repr(var_weights))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "np.save(\"arr.npy\", weights)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "zFbidFYJ3Eek"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "np.save(\"arr.npy\", weights)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "accuracy(Y_test, [np.sign(variational_classifier(weights, bias, x)) for x in X_test])"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -914,12 +911,11 @@
         "id": "fKWflUbGtZ4U",
         "outputId": "47fe6f37-4d8f-4c1a-d471-8d142028df66"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "KeyboardInterrupt",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -942,13 +938,14 @@
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
+      ],
+      "source": [
+        "accuracy(Y_test, [np.sign(variational_classifier(weights, bias, x)) for x in X_test])"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "[variational_classifier(weights, bias, x) for x in X_test[:20]]"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -956,10 +953,8 @@
         "id": "60clBoMUuEa6",
         "outputId": "898d2d8f-9c65-4c33-bd14-4a8fb6d8f081"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[tensor([6.24689778], requires_grad=True),\n",
@@ -984,16 +979,18 @@
               " tensor([6.24691144], requires_grad=True)]"
             ]
           },
+          "execution_count": 16,
           "metadata": {},
-          "execution_count": 16
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "[variational_classifier(weights, bias, x) for x in X_test[:20]]"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "np.unique(Y_test[:20], return_counts=True)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1001,22 +998,27 @@
         "id": "QWcULkkIxXG_",
         "outputId": "00a86b87-c04b-485c-c47d-3b0ed7c9758d"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(array([-1,  1]), array([11,  9]))"
             ]
           },
+          "execution_count": 201,
           "metadata": {},
-          "execution_count": 201
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "np.unique(Y_test[:20], return_counts=True)"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "quantum",
       "language": "python",
@@ -1034,10 +1036,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.10.11"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "provenance": []
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
