--- a/QSVM_implementation.ipynb
+++ b/QSVM_implementation.ipynb
@@ -844,7 +844,7 @@
         "id": "kZIb1kG8FiuC",
         "outputId": "9d749d69-70a6-4935-8e69-4987125c861f"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,6 +852,13 @@
           "text": [
             "/usr/local/lib/python3.10/dist-packages/sklearn/svm/_base.py:744: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
             "  y_ = column_or_1d(y, warn=True)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "QSVC classification test score: 0.92\n"
           ]
         }
       ]
