--- a/QSVM_implementation.ipynb
+++ b/QSVM_implementation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjh67s8bEdYfpKKXdbtDgS",
+      "authorship_tag": "ABX9TyPfegutud1wm+vAkiP3Y29e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Sergio Quiroga Sandoval \\\n",
-        "squirogas@unal.edu.co\n",
+        "**Sergio Quiroga Sandoval \\\n",
+        "squirogas@unal.edu.co \\\n",
+        "Universidad Nacional de Colombia**\n",
         "\n",
+        "The following notebook has two objectives:\n",
         "\n",
+        "1. Reproduce the implementation of the paper quantum enhanced feature learning first model (QSVC). (modified version of Quiskit documentation).\n",
+        "Using the AD-HOC dataset.\n",
         "\n",
-        "The following is a reproduced implementation of the paper quantum enhanced feature learning first model (QSVC), a modified version of Quiskit documentation.\n",
-        "Using the AD-HOC dataset\n"
+        "2. Test the same algorithm and feature map in the dataset moons for checking its accuracy on a new scenario.\n",
+        "\n"
       ],
       "metadata": {
         "id": "g8TZNPOM6Bgf"
@@ -44,12 +48,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Fundamental concepts:\n",
-        "\n",
+        "Fundamental concepts can be found in the paper and the following qiskit classes:\n",
+        "[From variational Classifiers to linear classifiers](https://www.youtube.com/watch?v=m6EzmYsEOiI)\n",
+        "[Quantum Feature Spaces and Kernels](https://www.youtube.com/watch?v=zw3JYUrS-v8)\n",
         "\n",
         "*   Kernel, kernel matrix.\n",
-        "*   Quantum kernel.  https://www.youtube.com/watch?v=m6EzmYsEOiI\n",
-        "*   ZZ feature map. https://www.youtube.com/watch?v=zw3JYUrS-v8\n",
+        "*   Quantum kernel.  \n",
+        "*   ZZ feature map.\n",
         "*   Precomputed kernel matrix.\n",
         "\n"
       ],
@@ -587,7 +592,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Moons dataset"
+        "# Moons dataset testing for QSVC"
       ],
       "metadata": {
         "id": "VdTwXPgQDZX4"
@@ -672,43 +677,6 @@
       },
       "execution_count": 15,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "''' codigo antiguo para entrenar el modelo con moons dataset, se cambió por los siguientes bloques\n",
-        "X, y = make_moons(n_samples=200, noise=0.2, random_state=0) #originalmente 2000 samples\n",
-        "scaler = MinMaxScaler()\n",
-        "X = scaler.fit_transform(X)\n",
-        "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "        X, y, test_size=0.1, random_state=42)\n",
-        "y_train = y_train[:, np.newaxis]\n",
-        "y_test = y_test[:, np.newaxis]'''"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 72
-        },
-        "id": "27kW7K45HOd_",
-        "outputId": "8890d7d2-6370-4b37-9740-5c999b9aedb5"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "' codigo antiguo para entrenar el modelo con moons dataset, se cambió por los siguientes bloques\\nX, y = make_moons(n_samples=200, noise=0.2, random_state=0) #originalmente 2000 samples\\nscaler = MinMaxScaler()\\nX = scaler.fit_transform(X)\\nX_train, X_test, y_train, y_test = train_test_split(\\n        X, y, test_size=0.1, random_state=42)\\ny_train = y_train[:, np.newaxis]\\ny_test = y_test[:, np.newaxis]'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 16
-        }
-      ]
     },
     {
       "cell_type": "markdown",
