--- a/QSVM_implementation.ipynb
+++ b/QSVM_implementation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfegutud1wm+vAkiP3Y29e",
+      "authorship_tag": "ABX9TyOSMl1ZeG+zijw6DIeBrl1j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,10 +35,9 @@
         "\n",
         "The following notebook has two objectives:\n",
         "\n",
-        "1. Reproduce the implementation of the paper quantum enhanced feature learning first model (QSVC). (modified version of Quiskit documentation).\n",
-        "Using the AD-HOC dataset.\n",
+        "1. Reproduce the implementation of the paper quantum enhanced feature learning first model (QSVC). (modified version of Quiskit documentation). Using the AD-HOC dataset.\n",
         "\n",
-        "2. Test the same algorithm and feature map in the dataset moons for checking its accuracy on a new scenario.\n",
+        "2. Test the same algorithm and feature map in the **Moons** dataset for checking its accuracy on a new scenario.\n",
         "\n"
       ],
       "metadata": {
