--- a/QSVM_implementation.ipynb
+++ b/QSVM_implementation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlSmjuATsgb+UJ8jfVHLit",
+      "authorship_tag": "ABX9TyPiZx/OnqI3VcPsPYKfXY04",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,11 +29,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# **Quantum Machine learning Project:** QSVC implementation\n",
         "**Sergio Quiroga Sandoval \\\n",
         "squirogas@unal.edu.co \\\n",
         "Universidad Nacional de Colombia**\n",
         "\n",
-        "The following notebook has two objectives:\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "The notebook has two objectives:\n",
         "\n",
         "1. Reproduce the implementation of the paper quantum enhanced feature learning first model (QSVC). (modified version of Quiskit documentation). Using the AD-HOC dataset.\n",
         "\n",
@@ -663,22 +671,10 @@
         "!git clone https://github.com/SergioQS/Datasets"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "P8JoGh0MXu4o",
-        "outputId": "8b75436b-c718-4ed9-e8d4-b0554b55310e"
+        "id": "P8JoGh0MXu4o"
       },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: destination path 'Datasets' already exists and is not an empty directory.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -766,35 +762,13 @@
         "qsvc = QSVC(quantum_kernel=adhoc_kernel)\n",
         "qsvc.fit(X_train, y_train)\n",
         "\n",
-        "qsvc_score = qsvc.score(X_test, y_test)\n",
-        "\n",
-        "print(f\"QSVC classification test score: {qsvc_score}\")"
+        "qsvc_score = qsvc.score(X_test, y_test)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kZIb1kG8FiuC",
-        "outputId": "d23a4e6a-aecf-47a5-c91b-e4885feb17f0"
+        "id": "kZIb1kG8FiuC"
       },
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/svm/_base.py:744: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y_ = column_or_1d(y, warn=True)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "QSVC classification test score: 0.92\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -934,12 +908,10 @@
         "\n",
         "\n",
         "*   Con 50 samples: 0.8 test score\n",
-        "*   con 100 samples: 0.7 test score\n",
         "*   Con 200 samples: 0.9 test score  (1min30s)\n",
-        "*   con 500 samples: 0.92 test score  \n",
         "*   con 1000 samples: 0.92 (50 mins)\n",
         "\n",
-        "\n",
+        "The final results are in the last block of the notebook.\n",
         "\n"
       ],
       "metadata": {
@@ -1001,38 +973,13 @@
         "\n",
         "adhoc_svc.fit(X_train, y_train)\n",
         "\n",
-        "adhoc_score_callable_function = adhoc_svc.score(X_test, y_test)\n",
-        "\n",
-        "print(f\"Callable kernel classification test score: {adhoc_score_callable_function}\")"
+        "adhoc_score_callable_function = adhoc_svc.score(X_test, y_test)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OBcAlIIUOaqA",
-        "outputId": "a485a231-66eb-4676-b69c-a64484873a03"
+        "id": "OBcAlIIUOaqA"
       },
-      "execution_count": 38,
-      "outputs": [
-        {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/svm/_base.py:744: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y_ = column_or_1d(y, warn=True)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Callable kernel classification test score: 0.92\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1090,35 +1037,22 @@
         "\n",
         "adhoc_svc.fit(adhoc_matrix_train, y_train)\n",
         "\n",
-        "adhoc_score_precomputed_kernel = adhoc_svc.score(adhoc_matrix_test, y_test)\n",
-        "\n",
-        "print(f\"Precomputed kernel classification test score: {adhoc_score_precomputed_kernel}\")"
+        "adhoc_score_precomputed_kernel = adhoc_svc.score(adhoc_matrix_test, y_test)"
       ],
       "metadata": {
-        "id": "ydopxXh_Ozie",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "025d5d0b-0279-4cdc-984b-836182ebe487"
+        "id": "ydopxXh_Ozie"
       },
-      "execution_count": 45,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Precomputed kernel classification test score: 0.92\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/utils/validation.py:1143: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Results"
+      ],
+      "metadata": {
+        "id": "wcjoZA-6D8a3"
+      }
     },
     {
       "cell_type": "code",
@@ -1170,7 +1104,7 @@
         "Thank you for reading!"
       ],
       "metadata": {
-        "id": "HOOjV9cX_vJ_"
+        "id": "tw7hbIxCDElL"
       }
     }
   ]
