--- a/QSVM_implementation.ipynb
+++ b/QSVM_implementation.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "gXc2ozA6lW90"
       ],
-      "authorship_tag": "ABX9TyNKm839BkIMdfA7HtTN+HwD",
+      "authorship_tag": "ABX9TyM6NHhFC4MR9gbXSbzaaBIz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -354,11 +354,14 @@
       },
       "outputs": [],
       "source": [
-        "adhoc_feature_map = ZZFeatureMap(feature_dimension=adhoc_dimension, reps=2, entanglement=\"linear\")   #create a quantum kernel instance that will help classify the data.\n",
-        "                                                                                                     # in this case the feature map is a two-qubit ZZFeatureMap.\n",
+        "#create a quantum kernel instance that will help classify the data.\n",
+        "adhoc_feature_map = ZZFeatureMap(feature_dimension=adhoc_dimension, reps=2, entanglement=\"linear\")\n",
+        "\n",
+        "# in this case the feature map is a two-qubit ZZFeatureMap.\n",
         "sampler = Sampler()\n",
         "\n",
-        "fidelity = ComputeUncompute(sampler=sampler)                                                        #the ComputeUncompute fidelity subroutine leverages the Sampler primitive.\n",
+        " #the ComputeUncompute fidelity subroutine leverages the Sampler primitive.\n",
+        "fidelity = ComputeUncompute(sampler=sampler)\n",
         "\n",
         "adhoc_kernel = FidelityQuantumKernel(fidelity=fidelity, feature_map=adhoc_feature_map)"
       ]
@@ -375,9 +378,12 @@
     {
       "cell_type": "code",
       "source": [
-        "from qiskit_machine_learning.algorithms import QSVC                                                 #QSVC is an alternative training algorithm provided by qiskit-machine-learning\n",
+        "#QSVC is an alternative training algorithm provided by qiskit-machine-learning\n",
+        "from qiskit_machine_learning.algorithms import QSVC\n",
         "\n",
-        "qsvc = QSVC(quantum_kernel=adhoc_kernel)                                                            #QSVC is an extension of SVC that takes in a quantum kernel instead of the kernel.evaluate\n",
+        "\n",
+        "#QSVC is an extension of SVC that takes in a quantum kernel instead of the kernel.evaluate\n",
+        "qsvc = QSVC(quantum_kernel=adhoc_kernel)\n",
         "\n",
         "qsvc.fit(train_features, train_labels)\n",
         "\n",
@@ -426,11 +432,14 @@
       "source": [
         "from sklearn.svm import SVC\n",
         "\n",
-        "adhoc_svc = SVC(kernel=adhoc_kernel.evaluate)                                                   # Directly pass the evaluate function of the quantum kernel as a callable.\n",
+        "# Directly pass the evaluate function of the quantum kernel as a callable.\n",
+        "adhoc_svc = SVC(kernel=adhoc_kernel.evaluate)\n",
         "\n",
-        "adhoc_svc.fit(train_features, train_labels)                                                     # Train the SVC by calling the fit method\n",
+        " # Train the SVC by calling the fit method\n",
+        "adhoc_svc.fit(train_features, train_labels)\n",
         "\n",
-        "adhoc_score_callable_function = adhoc_svc.score(test_features, test_labels)                     # Evaluate the model for accuracy\n",
+        "# Evaluate the model for accuracy\n",
+        "adhoc_score_callable_function = adhoc_svc.score(test_features, test_labels)\n",
         "\n",
         "print(f\"Callable kernel classification test score: {adhoc_score_callable_function}\")"
       ],
@@ -528,12 +537,13 @@
       "cell_type": "code",
       "source": [
         "#We train a new SVC\n",
-        "adhoc_svc = SVC(kernel=\"precomputed\")   # We use these generated matrices by setting the kernel parameter instance to \"precomputed\"\n",
+        "# We use these generated matrices by setting the kernel parameter instance to \"precomputed\"\n",
+        "adhoc_svc = SVC(kernel=\"precomputed\")\n",
         "\n",
         "adhoc_svc.fit(adhoc_matrix_train, train_labels)\n",
         "\n",
-        "adhoc_score_precomputed_kernel = adhoc_svc.score(adhoc_matrix_test, test_labels)       # Evaluate the accuracy of this classifier with score\n",
-        "\n",
+        "# Evaluate the accuracy of this classifier with score function\n",
+        "adhoc_score_precomputed_kernel = adhoc_svc.score(adhoc_matrix_test, test_labels)\n",
         "print(f\"Precomputed kernel classification test score: {adhoc_score_precomputed_kernel}\")"
       ],
       "metadata": {
@@ -794,13 +804,15 @@
     {
       "cell_type": "code",
       "source": [
-        "#Defining the kernel\n",
-        "adhoc_feature_map = ZZFeatureMap(feature_dimension=2, reps=2, entanglement=\"linear\")   #create a quantum kernel instance that will help classify the data.\n",
-        "                                                                                       # in this case the feature map is a two-qubit ZZFeatureMap.\n",
+        "\n",
+        "#Creating a quantum kernel instance that will help classify the data.\n",
+        " # in this case the feature map is a two-qubit ZZFeatureMap.\n",
+        "adhoc_feature_map = ZZFeatureMap(feature_dimension=2, reps=2, entanglement=\"linear\")\n",
         "sampler = Sampler()\n",
         "\n",
         "fidelity = ComputeUncompute(sampler=sampler)\n",
         "\n",
+        "#use the FidelityQuantumKernel class, and pass two input arguments fidelity and feature_map\n",
         "adhoc_kernel = FidelityQuantumKernel(fidelity=fidelity, feature_map=adhoc_feature_map)\n"
       ],
       "metadata": {
@@ -812,11 +824,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# fitting and testing QSVC with the defined kernel from previous block\n",
-        "qsvc = QSVC(quantum_kernel=adhoc_kernel)                                             #QSVC is an extension of SVC that takes in a quantum kernel instead of the kernel.evaluate\n",
+        "#QSVC is an extension of SVC that takes in a quantum kernel instead of the kernel.evaluate\n",
+        "qsvc = QSVC(quantum_kernel=adhoc_kernel)\n",
         "\n",
+        "# fitting and testing QSVC with the defined kernel from previous block\n",
         "qsvc.fit(X_train, y_train)\n",
         "\n",
+        "#testing\n",
         "qsvc_score = qsvc.score(X_test, y_test)\n"
       ],
       "metadata": {
@@ -883,7 +897,7 @@
     {
       "cell_type": "code",
       "source": [
-        "### one-hot encode the predicts for X_test\n",
+        "# one-hot encode the predicts for X_test\n",
         "X_test_preds_oh = np.zeros((len(X_test_preds), 2))\n",
         "for i in range(len(X_test_preds)):\n",
         "  if X_test_preds[i] == 0:\n",
@@ -897,7 +911,7 @@
         "X_test_preds_one = X_test_preds_oh[:,1]\n",
         "X_grid_preds = qsvc.predict(X_grid)\n",
         "\n",
-        "### one-hot encode the predicts for X_grid\n",
+        "# one-hot encode the predicts for X_grid\n",
         "X_grid_preds_oh = np.zeros((len(X_grid_preds), 2))\n",
         "for i in range(len(X_grid_preds)):\n",
         "  if X_grid_preds[i] == 0:\n",
@@ -907,7 +921,7 @@
         "\n",
         "len(X_grid_preds_oh)\n",
         "\n",
-        "### # extract the predictions for X_test and X_grid data sets\n",
+        "# extract the predictions for X_test and X_grid data sets\n",
         "\n",
         "X_grid_preds_zero = X_grid_preds_oh[:,0]\n",
         "X_grid_preds_one = X_grid_preds_oh[:,1]"
@@ -1024,11 +1038,14 @@
       "source": [
         "from sklearn.svm import SVC\n",
         "\n",
-        "adhoc_svc = SVC(kernel=adhoc_kernel.evaluate)                                 # Directly pass the evaluate function of the quantum kernel as a callable.\n",
+        "# Directly pass the evaluate function of the quantum kernel as a callable.\n",
+        "adhoc_svc = SVC(kernel=adhoc_kernel.evaluate)\n",
         "\n",
-        "adhoc_svc.fit(X_train, y_train)                                               # Train the SVC by calling the fit method\n",
+        " # Train the SVC by calling the fit method\n",
+        "adhoc_svc.fit(X_train, y_train)\n",
         "\n",
-        "adhoc_score_callable_function = adhoc_svc.score(X_test, y_test)               # Evaluate the model accuracy"
+        "# Evaluate the model accuracy\n",
+        "adhoc_score_callable_function = adhoc_svc.score(X_test, y_test)"
       ],
       "metadata": {
         "id": "OBcAlIIUOaqA"
@@ -1094,11 +1111,13 @@
     {
       "cell_type": "code",
       "source": [
-        "adhoc_svc = SVC(kernel=\"precomputed\")                   # We use these generated matrices by setting the kernel parameter instance to \"precomputed\"\n",
+        "# We use these generated matrices by setting the kernel parameter instance to \"precomputed\"\n",
+        "adhoc_svc = SVC(kernel=\"precomputed\")\n",
         "\n",
         "adhoc_svc.fit(adhoc_matrix_train, y_train)\n",
         "\n",
-        "adhoc_score_precomputed_kernel = adhoc_svc.score(adhoc_matrix_test, y_test)     # Evaluate the accuracy of this classifier with score\n"
+        "# Evaluate the accuracy of this classifier with score\n",
+        "adhoc_score_precomputed_kernel = adhoc_svc.score(adhoc_matrix_test, y_test)"
       ],
       "metadata": {
         "id": "ydopxXh_Ozie"
